# BotEyes

./: Cargo.toml  README.md
.claude/: settings.local.json
examples/: demo.rs  screenshot.rs
src/: lib.rs
src/animation/: mod.rs
src/draw/: mod.rs
src/types/: mod.rs
